Funciona el jar pero es muy pesado despues veo como lo resuelvo